2011-03-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Oeffnungszeiten als Freitext - keine Berechnung mehr ob geoeffnet oder geschlossen (WWW-607)
	* Aenderung der Ausgabereihenfolge im FE (Sigel, Anschrift, Oeffnungszeiten, Kontakt, Bestand, Zusatzinformationen) (WWW-604)
	* Optimierung Zuweisung Controller->View
	* Lokalisierung (WWW-606)

2011-03-08 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Einfuegen der Storage PID ueber Constants

2011-02-28 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Inhaltsverzeichnis in der Sidebar wird nicht angezeigt (WWW-581)
	* Aenderung der Zeitzone

2011-02-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hook Bugfixing

2011-02-22 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hook Anpassung

2011-02-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Fakultaeten und Bibliotheken werden mit Nachfrage geloescht

2011-02-10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Pi2 erstellt und konfiguriert (Bibliotheken und Sigelauflistung) WWW-525
	* Singleansicht in Pi2 integriert (Klick auf Bibliothek) WWW-531
	* Loeschen von Bibliotheken moeglich (Flag deleted=1 in DB) WWW-517

2011-02-09 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Codeoptimierung
	* Pruefung ob in Semesterferien andere Oeffnungszeiten (WWW-527)

2011-02-04 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hookaufruf kompatibel zu TYPO3 4.4 gemacht
	* Content Rendering vereinheitlicht (WWW-530)
	* Maps Optik angepasst (Infobox)
	* Singleansicht (WWW-531)
	* Ansicht nur Bibliotheken mit Sigel und Titel (WWW-525)

2011-02-03 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Frontendausgabe angepasst (WWW-529)
	* Ausgabe externer Links im neuen Fenster
	* Optimiertes Parsen der Links
	* Standardmarker fuer Google Maps Einbindung (WWW-524)
	* Onclick Oeffnung des Maps Infofensters
	* Sigel generischer gestaltet (WWW-526)
	* Zeitzonenhartkodierung entfernt
