@@ -1,47 +1,0 @@
-<?php
-
-/* * *************************************************************
- *  Copyright notice
- *
- *  (c) 2010 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
- *  All rights reserved
- *
- *  This script is part of the TYPO3 project. The TYPO3 project is
- *  free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 2 of the License, or
- *  (at your option) any later version.
- *
- *  The GNU General Public License can be found at
- *  http://www.gnu.org/copyleft/gpl.html.
- *
- *  This script is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *
- *  This copyright notice MUST APPEAR in all copies of the script!
- * ************************************************************* */
-
-/**
- * View Helper fuer eine Datumsformat - warum auch immer Fluid das nicht automatisch macht
- * $Id$
- * @author ingop
- */
-class Tx_Standorte_ViewHelpers_TimeFormatViewHelper extends Tx_Fluid_Core_ViewHelper_AbstractViewHelper {
-
-	/**
-	 * Formats a given timestamp in seconds to a human readable format
-	 *
-	 * @param int $ts The timestamp
-	 * @return string The formated Date/Time
-	 */
-	public function render($ts) {
-
-		$zeit = $ts - 3600;
-		return date('H:i', $zeit);
-	}
-
-}
-
-?>
