@@ -1,3 +1,6 @@
+2011-03-15 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* Der Bestand ist teilweise im GUK enthalten (WWW-596)
+
 2011-03-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Oeffnungszeiten als Freitext - keine Berechnung mehr ob geoeffnet oder geschlossen (WWW-607)
 	* Aenderung der Ausgabereihenfolge im FE (Sigel, Anschrift, Oeffnungszeiten, Kontakt, Bestand, Zusatzinformationen) (WWW-604)
